@@ -3,20 +3,18 @@ package org.uva.sea.ql.parser.test;
 import static org.junit.Assert.assertEquals;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameters;
-import org.uva.sea.ql.ast.Add;
-import org.uva.sea.ql.ast.Ident;
-import org.uva.sea.ql.ast.Int;
-import org.uva.sea.ql.ast.LT;
-import org.uva.sea.ql.ast.Mul;
-import org.uva.sea.ql.ast.type.Type;
+import org.uva.sea.ql.ast.expr.binary.Add;
+import org.uva.sea.ql.ast.expr.binary.LT;
+import org.uva.sea.ql.ast.expr.binary.Mul;
+import org.uva.sea.ql.ast.expr.value.Ident;
+import org.uva.sea.ql.ast.expr.value.Int;
+import org.uva.sea.ql.interpreter.Env;
 import org.uva.sea.ql.interpreter.IntVal;
 import org.uva.sea.ql.parser.antlr.ANTLRParser;
 
@@ -91,55 +89,54 @@ public class TestExpressions {
 	
 	@Test
 	public void testCalcs() throws ParseError {
-		assertEquals(new Integer(32) , ((IntVal)parser.parse("8 * 4").interpret()).getVal());
-		assertEquals(new Integer(11) , ((IntVal)parser.parse("1 - 4 / 2 + 12").interpret()).getVal());
-		assertEquals(new Integer(45) , ((IntVal)parser.parse("3 - 18 + 15 * 4").interpret()).getVal());
-		assertEquals(new Integer(-30) , ((IntVal)parser.parse("(3 - 18) * 2").interpret()).getVal());
-		assertEquals(new Integer(-30) , ((IntVal)parser.parse("(3 - 18) * 2").interpret()).getVal());
+		assertEquals(Integer.valueOf(32) , ((IntVal)parser.parse("8 * 4").eval(null)).getValue());
+		assertEquals(Integer.valueOf(11) , ((IntVal)parser.parse("1 - 4 / 2 + 12").eval(null)).getValue());
+		assertEquals(Integer.valueOf(45) , ((IntVal)parser.parse("3 - 18 + 15 * 4").eval(null)).getValue());
+		assertEquals(Integer.valueOf(-30) , ((IntVal)parser.parse("(3 - 18) * 2").eval(null)).getValue());
 	}
 	
 	@Test
 	public void testUnaryTypes() throws ParseError {
-		Map<Ident, Type> testMap = new HashMap<Ident, Type>();
-		assertEquals(0 , parser.parse("3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("-3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("+3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("true").checkType(testMap).size());
-		assertEquals(0 , parser.parse("!true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("!3").checkType(testMap).size());
-		assertEquals(1 , parser.parse("+true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("-true").checkType(testMap).size());
+		Env testEnv = new Env();
+		assertEquals(0 , parser.parse("3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("-3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("+3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("true").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("!true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("!3").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("+true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("-true").getTypeErrors(testEnv).size());
 	}
 	
 	@Test
 	public void testBinaryTypes() throws ParseError {
-		Map<Ident, Type> testMap = new HashMap<Ident, Type>();
-		assertEquals(0 , parser.parse("3 + 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 * 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 / 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 - 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 <= 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 < 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 == 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 > 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 >= 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("3 != 3").checkType(testMap).size());
-		assertEquals(0 , parser.parse("true && true").checkType(testMap).size());
-		assertEquals(0 , parser.parse("true || true").checkType(testMap).size());
+		Env testEnv = new Env();
+		assertEquals(0 , parser.parse("3 + 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 * 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 / 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 - 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 <= 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 < 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 == 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 > 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 >= 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("3 != 3").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("true && true").getTypeErrors(testEnv).size());
+		assertEquals(0 , parser.parse("true || true").getTypeErrors(testEnv).size());
 		
-		assertEquals(1 , parser.parse("3 + true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 * true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 / true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 - true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 <= true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 < true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 == true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 > true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 >= true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 != true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 && true").checkType(testMap).size());
-		assertEquals(1 , parser.parse("3 || true").checkType(testMap).size());
-		assertEquals(2 , parser.parse("3 + true * 8 - true + 3").checkType(testMap).size());
+		assertEquals(1 , parser.parse("3 + true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 * true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 / true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 - true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 <= true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 < true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 == true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 > true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 >= true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 != true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 && true").getTypeErrors(testEnv).size());
+		assertEquals(1 , parser.parse("3 || true").getTypeErrors(testEnv).size());
+		assertEquals(2 , parser.parse("3 + true * 8 - true + 3").getTypeErrors(testEnv).size());
 	}
 	
 }
